--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,12 @@ dependencies:
   cloud_firestore: 6.1.1
   intl: ^0.20.2
   provider: ^6.1.2
-  firebase_ai: ^3.6.1 
+  firebase_ai: ^3.6.1
+  pdf: ^3.10.8
+  printing: ^5.11.0
+  csv: ^6.0.0
+  path_provider: ^2.1.3
+  share_plus: ^10.1.0
   
 dev_dependencies:
   flutter_test:
